syntax = "proto3";
package h2x.govplus;

option go_package = "github.com/h2x/v4-chain/protocol/x/govplus/types";

// GenesisState defines the govplus module's genesis state.
message GenesisState {}
